add_library(strtokenize SHARED strtokenizer.cpp)
add_library(dataset SHARED dataset.cpp)
add_library(utils SHARED utils.cpp)
add_library(model SHARED model.cpp) 
#strtokenizer.cpp dataset.cpp utils.cpp)
target_link_libraries(model strtokenize dataset utils ${Boost_LIBRARIES})
add_executable(lda lda.cpp)
target_link_libraries(lda model)
#target_link_libraries(demo  ${Boost_LIBRARIES})
